--- a/index.html
+++ b/index.html
@@ -1,18 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>UtubeBird</title>
-  <style>
-    canvas {
-      border: 1px solid #000;
-      display: block;
-      margin: 0 auto;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="gameCanvas" width="600" height="900"></canvas>
-  <script src="game.js"></script>
-</body>
-</html>
+<iframe src="https://19b6c226-50dd-403d-9ffa-8004f556220d-00-2gtz5lqbbj3yd.janeway.replit.dev/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+</iframe>
